--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <title>Vokou</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">
+  
+  <script src="http://maps.google.cn/maps/api/js?key=AIzaSyBqNRE6KQaoHHP5HFLyfVJCtNPgBgSTJvk&amp;signed_in=true&amp;libraries=places" ></script>
 </head>
 <body>
-<div id="app"></div>
-<script src="bundle.js"></script>
+    <div id="app"></div>
+    <script src="bundle.js"></script>
 </body>
 </html>
